# Samples

./: .gitignore  LICENSE  README.md
References/: README.md  v4l2_capture.c  v4l2_grab.c
source/: CMakeLists.txt  README.md  base-linux-build.bash
source/EnetUtil/: CMakeLists.txt  linux-build.bash
source/EnetUtil/include/: EnetUtil.hpp  NtwkConnect.hpp  NtwkFixedArray.hpp  NtwkUtil.hpp
source/EnetUtil/src/: EnetUtil.cpp  NtwkBasicSockServer.cpp  NtwkConnect.cpp  NtwkUtil.cpp  ntwk_connection_thread.cpp  ntwk_queue_thread.cpp
source/EnetUtil/src/main_programs/: main_NtwkBasicSockServer.cpp  main_client_for_basic_server.cpp  main_enet_util.cpp  main_fixed_array.cpp  main_ntwk_basic_sock_server.cpp  main_ntwk_fixed_array.cpp  main_ntwk_util.cpp  main_simple_server.cpp  test_basic_server.bash
source/EnetUtil/src/main_programs/include/ntwk_basic_sock_server/: ntwk_connection_thread.hpp  ntwk_queue_thread.hpp
source/QtApps/: README.md
source/QtApps/src/SimpleVidStream/: CMakeLists.txt  TestUtil.cpp  TestUtil.hpp  graphicsviewwidget.cpp  graphicsviewwidget.h  graphicsviewwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simple_vid_stream.json
source/QtApps/src/SimpleVidStream/tools/: control_main.cpp  control_main.hpp  nonqt_util.cpp  vidstream_profiler_thread.cpp  vidstream_profiler_thread.hpp
source/QtApps/src/VideoCapturePlayer/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protovideoplayer.cpp  protovideoplayer.hpp  resources.qrc  stream2qt_video_capture.cpp  stream2qt_video_capture.hpp  video_capture_player.json  video_stream_buffers.cpp  video_stream_buffers.hpp  videowidget.cpp  videowidget.hpp  videowidget.ui
source/QtApps/src/VideoCapturePlayer/tools/: control_main.cpp  logger_tools.cpp  logger_tools.hpp  nonqt_util.cpp  nonqt_util.hpp  parse_tools.cpp  vidstream_profiler_thread.cpp  vidstream_profiler_thread.hpp
source/QtSample/: CMakeLists.txt  README.md  linux-build.bash
source/QtSample/src/main_programs/: input.txt  main_text_finder_window.cpp  main_text_finder_window.h  main_text_finder_window.ui  text_finder_main.cpp
source/Util/: CMakeLists.txt  linux-build.bash
source/Util/include/: ConfigSingleton.hpp  JsonCppUtil.hpp  MainLogger.hpp  Utility.hpp  circular_buffer.hpp  commandline.hpp  condition_data.hpp  data_item.hpp  generic_data.hpp  shared_data_items.hpp
source/Util/src/: ConfigSingleton.cpp  JsonCppUtil.cpp  MainLogger.cpp  Utility.cpp  commandline.cpp
source/Util/src/main_programs/: main_UtilLogger_example.cpp  main_circular_buffer.cpp  main_commandline.cpp  main_condition_data.cpp  main_jsoncpp_samplecfg.cpp  main_jsoncpp_samplecfg.json  main_util_combo_objects.cpp
source/Util/src/scripts/: start-app.bash
source/Video/: CMakeLists.txt  README.md
source/Video/include/: cppglue.h  cppglue.hpp  suspend_resume_test_thread.hpp  v4l2_interface.hpp  v4l2_raw_capture.h  v4l2_raw_capture.hpp  vidcap_capture_thread.hpp  vidcap_plugin_factory.hpp  vidcap_profiler_thread.hpp  vidcap_queue_frame_workers.hpp  vidcap_raw_queue_thread.hpp  vidcap_v4l2_driver_interface.hpp  vidcap_v4l2_interface.hpp  video_capture_commandline.hpp  video_capture_globals.hpp  video_capture_profiler.hpp  video_capture_raw_queue.hpp
source/Video/include/plugins/: vidcap_capture_thread.hpp  vidcap_opencv_stream.hpp  vidcap_v4l2_driver_interface.hpp
source/Video/src/: cppglue.c  cppglue.cpp  v4l2_interface.cpp  v4l2_raw_capture.c  v4l2_raw_capture.cpp  video_capture_profiler.cpp  video_capture_raw_queue.cpp
source/Video/src/common/: suspend_resume_test_thread.cpp  vidcap_capture_thread.cpp  vidcap_plugin_factory.cpp  vidcap_profiler_thread.cpp  vidcap_queue_frame_workers.cpp  vidcap_raw_queue_thread.cpp  video_capture_commandline.cpp  video_capture_globals.cpp
source/Video/src/main_programs/: config_tools.cpp  config_tools.hpp  convert_raw_capture.bash  logger_tools.cpp  logger_tools.hpp  main_raw_capture.json  main_v4l2_raw_capture.cpp  main_video_capture.cpp  main_vl42_yuv_2_rgb.cpp  parse_tools.hpp  video_capture.json
source/Video/src/plugins/: CMakeLists.txt  README.md
source/Video/src/plugins/common/: vidcap_capture_thread.cpp
source/Video/src/plugins/opencv/: vidcap_opencv_stream.cpp
source/Video/src/plugins/v4l2/: vidcap_v4l2_driver_interface.cpp
source/Video/src/v4l2/: vidcap_v4l2_driver_interface.cpp  vidcap_v4l2_interface.cpp
source/cmake/: EnetUtil.cmake  Qt5Sample.cmake  Util.cmake  Video.cmake  VideoPlugin.cmake  tools.cmake
source/shell_env/: bash_env.sh
